fix some label and layout issues (history, bot store)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -449,7 +449,7 @@ ul.tx-copayers {
 }
 
 .last-transactions-content {
-  padding: 1.5rem 1rem;
+  padding: 1rem 1rem;
   cursor:pointer;
   border-bottom: 1px solid #E4E8EC;
 }
@@ -708,7 +708,14 @@ input[type=number]::-webkit-outer-spin-button {
 
 .label {
   font-weight: 500;
-  padding: 0.3rem 0.4rem;
+  /* padding: 0.3rem 0.4rem; */
+  padding:7px !important;
+  font-size: 65% !important;
+  width: 60px;
+  text-overflow: ellipsis;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .label.outline {
@@ -725,11 +732,11 @@ input[type=number]::-webkit-outer-spin-button {
 .label.success {background-color: #1ABC9C;}
 .label.alert {background-color: #ED4A43;}
 .label.gray {background-color: #4B6178;padding: 10px;}
-.label.light-gray {background-color: #7A8C9E;;}
+.label.light-gray {background-color: #96A5B3;}
 
 .history .label  {
-  /* width: 75px; */
-  padding:8px;
+  max-width: 75px;
+  padding:7px;
   text-align: center;
   font-size: 65%;
   overflow: hidden;
@@ -1740,4 +1747,13 @@ a.suggest-command {
 
 .label .gray .radius{
   padding: 10px;
+}
+
+.order-button-right{
+  line-height: 30px;
+  font-size: 13px;
+}
+
+.bot_name{
+  vertical-align: middle;
 }
